--- a/orders.html
+++ b/orders.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl" class="light-style layout-menu-fixed" data-theme="theme-default"
-    data-assets-path="../assets/" data-template="vertical-menu-template-free">
+    data-assets-path="assets/" data-template="vertical-menu-template-free">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Timcheh-Management-Page">
-    <meta name="author" content="Hamed Miraki">
+    <meta name="author" content="Hamed">
     <meta name="Keywords" content="Html,Css,Bootstrap,JS,management-template">
-    <title>Timcheh-Management-Page</title>
+    <title></title>
     <!-- fav-icon and apple touch icon -->
-    <link href="../assets/image/favicon-32x32.png" rel="icon" type="image/x-icon">
-    <link href="../assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
+    <link href="assets/image/favicon-32x32.png" rel="icon" type="image/x-icon">
+    <link href="assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
     <!-- font icons -->
-    <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css">
-    <link href="../assets/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css"
+    <link rel="stylesheet" href="assets/vendor/fonts/boxicons.css">
+    <link href="assets/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css"
         rel="stylesheet">
-    <link href="../assets/uicons/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    <link href="assets/uicons/uicons-regular-rounded/css/uicons-regular-rounded.css"
         rel="stylesheet">
     <!-- core css -->
-    <link href="../assets/vendor/css/core-rtl.css" type="text/css" rel="stylesheet"
+    <link href="assets/vendor/css/core-rtl.css" type="text/css" rel="stylesheet"
         class="template-customizer-core-css">
-    <link href="../assets/vendor/css/theme-default-rtl.css" type="text/css" rel="stylesheet"
+    <link href="assets/vendor/css/theme-default-rtl.css" type="text/css" rel="stylesheet"
         class="template-customizer-theme-css">
-    <link href="../assets/css/demo-rtl.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/demo-rtl.css" type="text/css" rel="stylesheet">
     <!-- Vendors css -->
-    <link href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet">
-    <link href="../assets/vendor/libs/apex-charts/apex-charts.css" rel="stylesheet">
+    <link href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet">
+    <link href="assets/vendor/libs/apex-charts/apex-charts.css" rel="stylesheet">
     <!-- Helpers -->
-    <script src="../assets/vendor/js/helpers.js"></script>
-    <script src="../assets/js/config.js"></script>
+    <script src="assets/vendor/js/helpers.js"></script>
+    <script src="assets/js/config.js"></script>
 </head>
 
 <body>
@@ -39,8 +39,8 @@
             <!-- Menu -->
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
-                    <a href="Timcheh-mgmt-pg.html" class="app-brand-link">
-                        <img src="../assets/image/logo.svg" alt="Timcheh-Logo" class="app-brand-logo demo">
+                    <a href="index.html" class="app-brand-link">
+                        <img src="assets/image/logo.svg" alt="Timcheh-Logo" class="app-brand-logo demo">
                         <span
                             class="app-brand-text demo menu-text fs-6 fw-bolder text-success mark bg-primary p-1 rounded-pill ms-2">
                             پنل مدیریت
@@ -55,7 +55,7 @@
                 <ul class="menu-inner py-1">
                     <!-- Dashboard -->
                     <li class="menu-item">
-                        <a href="Timcheh-mgmt-pg.html" class="menu-link">
+                        <a href="index.html" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-home-alt"></i>
                             <div data-i18n="Analytics" class="dana-bold">داشبورد</div>
                         </a>
@@ -72,12 +72,12 @@
                                     <div data-i18n="sales">فروش</div>
                                 </a>
                             </li>
-                            <li class="menu-item active">
+                            <li class="menu-item">
                                 <a href="view.html" class="menu-link">
                                     <div data-i18n="view-count">بازدید</div>
                                 </a>
                             </li>
-                            <li class="menu-item">
+                            <li class="menu-item active">
                                 <a href="orders.html" class="menu-link">
                                     <div data-i18n="new-orders">سفارشات</div>
                                 </a>
@@ -390,14 +390,14 @@
         </div>
     </div>
     <!-- Core JS -->
-    <script src="../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../assets/vendor/js/bootstrap.js"></script>
-    <script src="../assets/vendor/js/menu.js"></script>
-    <script src="../assets/vendor/libs/apex-charts/apexcharts.js"></script>
-    <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/dashboards-analytics.js"></script>
+    <script src="assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="assets/vendor/libs/popper/popper.js"></script>
+    <script src="assets/vendor/js/bootstrap.js"></script>
+    <script src="assets/vendor/js/menu.js"></script>
+    <script src="assets/vendor/libs/apex-charts/apexcharts.js"></script>
+    <script src="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/dashboards-analytics.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
