--- a/pages-account-settings-connections.html
+++ b/pages-account-settings-connections.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="fa" dir="rtl" class="light-style layout-menu-fixed" data-theme="theme-default"
-    data-assets-path="../assets/" data-template="vertical-menu-template-free">
+    data-assets-path="assets/" data-template="vertical-menu-template-free">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Timcheh-Management-Page-Account-Connections">
-    <meta name="author" content="Hamed Miraki">
+    <meta name="author" content="Hamed">
     <meta name="Keywords" content="Html,Css,Bootstrap,JS,management-template">
     <title>Connections | Timcheh-Management-Page</title>
     <!-- theme toggling -->
@@ -99,26 +99,26 @@
         });
     </script>
     <!-- fav-icon and apple touch icon -->
-    <link href="../assets/image/favicon-32x32.png" rel="icon" type="image/x-icon">
-    <link href="../assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
+    <link href="assets/image/favicon-32x32.png" rel="icon" type="image/x-icon">
+    <link href="assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
     <!-- font icons -->
-    <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css">
-    <link href="../assets/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css"
+    <link rel="stylesheet" href="assets/vendor/fonts/boxicons.css">
+    <link href="assets/bootstrap-icons-1.11.3/font/bootstrap-icons.min.css"
         rel="stylesheet">
-    <link href="../assets/uicons/uicons-regular-rounded/css/uicons-regular-rounded.css"
+    <link href="assets/uicons/uicons-regular-rounded/css/uicons-regular-rounded.css"
         rel="stylesheet">
     <!-- core css -->
-    <link href="../assets/vendor/css/core-rtl.css" type="text/css" rel="stylesheet"
+    <link href="assets/vendor/css/core-rtl.css" type="text/css" rel="stylesheet"
         class="template-customizer-core-css">
-    <link href="../assets/vendor/css/theme-default-rtl.css" type="text/css" rel="stylesheet"
+    <link href="assets/vendor/css/theme-default-rtl.css" type="text/css" rel="stylesheet"
         class="template-customizer-theme-css">
-    <link href="../assets/css/demo-rtl.css" type="text/css" rel="stylesheet">
+    <link href="assets/css/demo-rtl.css" type="text/css" rel="stylesheet">
     <!-- Vendors css -->
-    <link href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet">
-    <link href="../assets/vendor/libs/apex-charts/apex-charts.css" rel="stylesheet">
+    <link href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet">
+    <link href="assets/vendor/libs/apex-charts/apex-charts.css" rel="stylesheet">
     <!-- Helpers -->
-    <script src="../assets/vendor/js/helpers.js"></script>
-    <script src="../assets/js/config.js"></script>
+    <script src="assets/vendor/js/helpers.js"></script>
+    <script src="assets/js/config.js"></script>
 </head>
 
 <body data-theme="light">
@@ -128,8 +128,8 @@
             <!-- Menu -->
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
-                    <a href="Timcheh-mgmt-pg.html" class="app-brand-link">
-                        <img src="../assets/image/logo.svg" alt="Timcheh-Logo" class="app-brand-logo demo">
+                    <a href="index.html" class="app-brand-link">
+                        <img src="assets/image/logo.svg" alt="Timcheh-Logo" class="app-brand-logo demo">
                         <span
                             class="app-brand-text demo menu-text fs-6 fw-bolder text-success mark bg-primary p-1 rounded-pill ms-2">
                             پنل مدیریت
@@ -144,7 +144,7 @@
                 <ul class="menu-inner py-1">
                     <!-- Dashboard -->
                     <li class="menu-item">
-                        <a href="Timcheh-mgmt-pg.html" class="menu-link">
+                        <a href="index.html" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-home-alt mb-1"></i>
                             <div data-i18n="Analytics" class="dana-semibold">داشبورد</div>
                         </a>
@@ -496,7 +496,7 @@
                     <div class="navbar-nav-left d-flex align-items-center w-100" id="navbar-collapse">
                         <a href="Timcheh.com/index.html" class="navbar-brand d-none d-sm-block me-5 ms-3"
                             data-bs-toggle="tooltip" data-bs-title="وبسایت فروشگاه" data-bs-placement="bottom">
-                            <img src="../assets/image/logo.svg" alt="Website" width="60px" height="30px">
+                            <img src="assets/image/logo.svg" alt="Website" width="60px" height="30px">
                         </a>
                         <!-- Search -->
                         <div class="navbar-nav align-items-center">
@@ -515,7 +515,7 @@
                                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
                                     data-bs-toggle="dropdown">
                                     <div class="avatar avatar-online">
-                                        <img src="../assets/img/avatars/7.png" alt
+                                        <img src="assets/img/avatars/7.png" alt
                                             class="w-px-40 h-auto rounded-circle" />
                                     </div>
                                 </a>
@@ -525,7 +525,7 @@
                                             <div class="d-flex">
                                                 <div class="flex-shrink-0 me-3">
                                                     <div class="avatar avatar-online">
-                                                        <img src="../assets/img/avatars/7.png" alt
+                                                        <img src="assets/img/avatars/7.png" alt
                                                             class="w-px-40 h-auto rounded-circle" />
                                                     </div>
                                                 </div>
@@ -738,7 +738,7 @@
                                                 <!-- Social Accounts -->
                                                 <div class="d-flex mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/facebook.png"
+                                                        <img src="assets/img/icons/brands/facebook.png"
                                                             alt="facebook" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -756,7 +756,7 @@
                                                 </div>
                                                 <div class="d-flex mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/x-social-media-black-icon.svg"
+                                                        <img src="assets/img/icons/brands/x-social-media-black-icon.svg"
                                                             alt="X" class="me-3" height="30" width="30px" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -777,7 +777,7 @@
                                                 </div>
                                                 <div class="d-flex mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/instagram.png"
+                                                        <img src="assets/img/icons/brands/instagram.png"
                                                             alt="instagram" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -799,7 +799,7 @@
                                                 </div>
                                                 <div class="d-flex mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/google.png"
+                                                        <img src="assets/img/icons/brands/google.png"
                                                             alt="google" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -821,7 +821,7 @@
                                                 </div>
                                                 <div class="d-flex">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/github.png"
+                                                        <img src="assets/img/icons/brands/github.png"
                                                             alt="github" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -852,7 +852,7 @@
                                                 <!-- Connections -->
                                                 <div class="d-flex align-items-center mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/x-social-media-black-icon.svg"
+                                                        <img src="assets/img/icons/brands/x-social-media-black-icon.svg"
                                                             alt="X" class="me-3" height="30" width="30px" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -871,7 +871,7 @@
                                                 </div>
                                                 <div class="d-flex align-items-center mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/instagram.png"
+                                                        <img src="assets/img/icons/brands/instagram.png"
                                                             alt="instagram" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -890,7 +890,7 @@
                                                 </div>
                                                 <div class="d-flex align-items-center mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/google.png"
+                                                        <img src="assets/img/icons/brands/google.png"
                                                             alt="google" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -909,7 +909,7 @@
                                                 </div>
                                                 <div class="d-flex align-items-center mb-3">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/facebook.png"
+                                                        <img src="assets/img/icons/brands/facebook.png"
                                                             alt="facebook" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -928,7 +928,7 @@
                                                 </div>
                                                 <div class="d-flex align-items-center">
                                                     <div class="flex-shrink-0">
-                                                        <img src="../assets/img/icons/brands/github.png"
+                                                        <img src="assets/img/icons/brands/github.png"
                                                             alt="GitHub" class="me-3" height="30" />
                                                     </div>
                                                     <div class="flex-grow-1 row">
@@ -1010,16 +1010,16 @@
         </div>
     </div>
     <!-- Core JS -->
-    <script src="../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../assets/vendor/js/bootstrap.js"></script>
-    <script src="../assets/vendor/js/menu.js"></script>
-    <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="../assets/vendor/libs/apex-charts/apexcharts.js"></script>
-    <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/dashboards-analytics.js"></script>
+    <script src="assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="assets/vendor/libs/popper/popper.js"></script>
+    <script src="assets/vendor/js/bootstrap.js"></script>
+    <script src="assets/vendor/js/menu.js"></script>
+    <script src="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="assets/vendor/libs/apex-charts/apexcharts.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/dashboards-analytics.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script src="../assets/js/pages-account-settings-account.js"></script>
+    <script src="assets/js/pages-account-settings-account.js"></script>
     <script>
         const translations = {
             en: null,
@@ -1064,13 +1064,13 @@
             const demoCss = document.querySelector('link[href*="demo"]');
 
             if (direction === 'rtl') {
-                coreCss.setAttribute('href', '../assets/vendor/css/core-rtl.css');
-                themeCss.setAttribute('href', '../assets/vendor/css/theme-default-rtl.css');
-                demoCss.setAttribute('href', '../assets/css/demo-rtl.css');
+                coreCss.setAttribute('href', 'assets/vendor/css/core-rtl.css');
+                themeCss.setAttribute('href', 'assets/vendor/css/theme-default-rtl.css');
+                demoCss.setAttribute('href', 'assets/css/demo-rtl.css');
             } else {
-                coreCss.setAttribute('href', '../assets/vendor/css/core.css');
-                themeCss.setAttribute('href', '../assets/vendor/css/theme-default.css');
-                demoCss.setAttribute('href', '../assets/css/demo.css');
+                coreCss.setAttribute('href', 'assets/vendor/css/core.css');
+                themeCss.setAttribute('href', 'assets/vendor/css/theme-default.css');
+                demoCss.setAttribute('href', 'assets/css/demo.css');
             }
         };
 
