--- a/auth-register-basic.html
+++ b/auth-register-basic.html
@@ -4,7 +4,7 @@
   class="light-style customizer-hide"
   dir="rtl"
   data-theme="theme-default"
-  data-assets-path="../assets/"
+  data-assets-path="assets/"
   data-template="vertical-menu-template-free"
 >
   <head>
@@ -14,9 +14,9 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-    <title>Password Reset</title>
+    <title>SignUp</title>
 
-    <meta name="description" content="Forgot Password" />
+    <meta name="description" content="SignUp" />
         <!-- theme toggling -->
         <script>
           // Apply the saved theme before the rest of the page loads
@@ -107,28 +107,28 @@
         });
       </script>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/image/favicon-32x32.png" />
-    <link href="../assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
+    <link rel="icon" type="image/x-icon" href="assets/image/favicon-32x32.png" />
+    <link href="assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
     <!-- Icons. Uncomment required icon fonts -->
-    <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
+    <link rel="stylesheet" href="assets/vendor/fonts/boxicons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="../assets/vendor/css/core-rtl.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="../assets/vendor/css/theme-default-rtl.css" class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="../assets/css/demo-rtl.css" />
+    <link rel="stylesheet" href="assets/vendor/css/core-rtl.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="assets/vendor/css/theme-default-rtl.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="assets/css/demo-rtl.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <!-- Page CSS -->
     <!-- Page -->
-    <link rel="stylesheet" href="../assets/vendor/css/pages/page-auth-rtl.css" />
+    <link rel="stylesheet" href="assets/vendor/css/pages/page-auth-rtl.css" />
     <!-- Helpers -->
-    <script src="../assets/vendor/js/helpers.js"></script>
+    <script src="assets/vendor/js/helpers.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="../assets/js/config.js"></script>
+    <script src="assets/js/config.js"></script>
   </head>
 
   <body data-theme="light">
@@ -136,66 +136,99 @@
 
     <div class="container-xxl">
       <div class="authentication-wrapper authentication-basic container-p-y">
-        <div class="authentication-inner py-4">
-          <!-- Forgot Password -->
+        <div class="authentication-inner">
+          <!-- Register Card -->
           <div class="card">
             <div class="card-body">
               <!-- Logo -->
               <div class="app-brand justify-content-center">
                 <a href="index.html" class="app-brand-link gap-2">
                   <span class="app-brand-logo demo">
-                    <img src="../assets/image/logo.svg" alt="Timcheh-Logo">
+                    <img src="assets/image/logo.svg" alt="Timcheh-Logo">
                   </span>
                 </a>
               </div>
               <!-- /Logo -->
-              <bdo dir="rtl">
-                <h4 class="mb-2">🔒 رمز عبور خود را فراموش کرده اید؟ </h4>
-                <p class="mb-4 text-muted">ایمیل متصل به حساب کاربری خود را وارد کنید. لینک بازیابی رمز عبور را برایتان ارسال میکنیم.</p>  
-              </bdo>
+                <h4 class="mb-2"> 🚀 سفر شما از اینجا شروع میشه...</h4>
+                <p class="mb-4 text-muted dana-medium">فقط کافیه یک حساب کاربری بسازید</p>  
               <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
                 <div class="mb-3">
-                  <label for="email" class="form-label dana-medium">ایمیل</label>
+                  <label for="username" class="form-label dana-medium">نام کاربری</label>
                   <input
-                    type="email"
+                    type="text"
+                    style="direction: ltr;"
                     class="form-control horizon-rounded"
-                    id="email"
-                    name="email"
-                    placeholder="ایمیل متصل به حساب خود را وارد کنید"
+                    id="username"
+                    name="username"
+                    placeholder="یک نام کاربری انتخاب کنید"
                     autofocus
                   />
                 </div>
-                <button class="btn btn-primary d-grid w-100 dana-medium">ارسال لینک بازیابی</button>
+                <div class="mb-3">
+                  <label for="email" class="form-label dana-medium">ایمیل</label>
+                  <input type="email" class="form-control horizon-rounded" id="email" name="email" placeholder="ایمیل خود را وارد کنید" />
+                </div>
+                <div class="mb-3 form-password-toggle">
+                  <label class="form-label dana-medium" for="password">رمز عبور</label>
+                  <div class="input-group input-group-merge">
+                    <input
+                      type="password"
+                      style="direction: ltr;"
+                      id="password"
+                      class="form-control"
+                      name="password"
+                      placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
+                      aria-describedby="password"
+                    />
+                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+                  </div>
+                </div>
+
+                <div class="mb-3">
+                  <div class="form-check" style="direction: rtl;">
+                    <input class="form-check-input" type="checkbox" id="terms-conditions" name="terms" role="button" />
+                    <label class="form-check-label" for="terms-conditions">
+                      من با
+                      <a href="sales.html">ضوابط و قوانین</a>
+                      موافقم
+                    </label>
+                  </div>
+                </div>
+                <button class="btn btn-primary d-grid w-100 dana-medium" id="SignUpBtn">ثبت نام</button>
               </form>
-              <div class="text-center">
-                <a href="auth-login-basic.html" class="d-flex align-items-center justify-content-center">
-                  بازگشت به صفحه ورود
-                  <i class="bx bx-chevron-left scaleX-n1-rtl bx-sm"></i>
-                </a>
-              </div>
+
+              <bdo dir="rtl">
+                <p class="text-center">
+                  <span>حساب کاربری دارید؟</span>
+                  <a href="auth-login-basic.html">
+                    <span>وارد شوید.</span>
+                  </a>
+                </p>
+              </bdo>
             </div>
           </div>
-          <!-- /Forgot Password -->
+          <!-- Register Card -->
         </div>
       </div>
     </div>
 
     <!-- / Content -->
 
+
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-    <script src="../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../assets/vendor/js/bootstrap.js"></script>
-    <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="assets/vendor/libs/popper/popper.js"></script>
+    <script src="assets/vendor/js/bootstrap.js"></script>
+    <script src="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
 
-    <script src="../assets/vendor/js/menu.js"></script>
+    <script src="assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
 
     <!-- Vendors JS -->
 
     <!-- Main JS -->
-    <script src="../assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- Page JS -->
 
