--- a/pages-misc-error.html
+++ b/pages-misc-error.html
@@ -4,7 +4,7 @@
   class="light-style"
   dir="rtl"
   data-theme="theme-default"
-  data-assets-path="../assets/"
+  data-assets-path="assets/"
   data-template="vertical-menu-template-free"
 >
   <head>
@@ -19,28 +19,28 @@
     <meta name="description" content="404 Error" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="../assets/image/favicon-32x32.png" />
-    <link href="../assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
+    <link rel="icon" type="image/x-icon" href="assets/image/favicon-32x32.png" />
+    <link href="assets/image/android-chrome-192x192.png" rel="apple-touch-icon">
     <!-- Icons. Uncomment required icon fonts -->
-    <link rel="stylesheet" href="../assets/vendor/fonts/boxicons.css" />
+    <link rel="stylesheet" href="assets/vendor/fonts/boxicons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="../assets/vendor/css/core.css" class="template-customizer-core-css" />
-    <link rel="stylesheet" href="../assets/vendor/css/theme-default-rtl.css" class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="../assets/css/demo-rtl.css" />
+    <link rel="stylesheet" href="assets/vendor/css/core.css" class="template-customizer-core-css" />
+    <link rel="stylesheet" href="assets/vendor/css/theme-default-rtl.css" class="template-customizer-theme-css" />
+    <link rel="stylesheet" href="assets/css/demo-rtl.css" />
 
     <!-- Vendors CSS -->
-    <link rel="stylesheet" href="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+    <link rel="stylesheet" href="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
 
     <!-- Page CSS -->
     <!-- Page -->
-    <link rel="stylesheet" href="../assets/vendor/css/pages/page-misc.css" />
+    <link rel="stylesheet" href="assets/vendor/css/pages/page-misc.css" />
     <!-- Helpers -->
-    <script src="../assets/vendor/js/helpers.js"></script>
+    <script src="assets/vendor/js/helpers.js"></script>
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="../assets/js/config.js"></script>
+    <script src="assets/js/config.js"></script>
   </head>
 
   <body>
@@ -53,7 +53,7 @@
         <p class="mb-4 mx-2">متاسفیم! 😖 صفحه مورد نظر شما در سرور یافت نشد</p>
         <div class="mt-3">
           <img
-            src="../assets/img/illustrations/page-misc-error-light.png"
+            src="assets/img/illustrations/page-misc-error-light.png"
             alt="page-misc-error-light"
             width="500"
             class="img-fluid"
@@ -69,18 +69,18 @@
 
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
-    <script src="../assets/vendor/libs/jquery/jquery.js"></script>
-    <script src="../assets/vendor/libs/popper/popper.js"></script>
-    <script src="../assets/vendor/js/bootstrap.js"></script>
-    <script src="../assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    <script src="assets/vendor/libs/jquery/jquery.js"></script>
+    <script src="assets/vendor/libs/popper/popper.js"></script>
+    <script src="assets/vendor/js/bootstrap.js"></script>
+    <script src="assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
 
-    <script src="../assets/vendor/js/menu.js"></script>
+    <script src="assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
 
     <!-- Vendors JS -->
 
     <!-- Main JS -->
-    <script src="../assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- Page JS -->
 
